[bug 162115760] Fix z-index for navbar on mobile devices

--- a/UI/assets/css/styles.css
+++ b/UI/assets/css/styles.css
@@ -458,6 +458,7 @@ tr > td:nth-child(5) {
 
   .navbar-menu.menu-open {
     max-height: 310px;
+    z-index: 1000;
   }
 
   .navbar-link a {
